# trading-games

./: .gitignore  Cargo.toml
bots/: Cargo.toml
bots/src/: market_maker.rs  market_taker.rs
client_app/: Cargo.toml
client_app/src/: app.rs  lib.rs  main.rs
client_lib/: Cargo.toml
client_lib/src/: bot.rs  lib.rs
exchange/: Cargo.toml
exchange/src/: book.rs  exchange.rs  lib.rs  types.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: test_websocket.py
server/: Cargo.toml
server/scripts/: test_websocket.py
server/src/: broadcaster.rs  main.rs  server.rs
