[package]
name = "client_lib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bot" # TODO: move this to folder like bots
path = "src/bot.rs"

[dependencies]
exchange = { path = "../exchange" }
protocol = { path = "../protocol" }
tungstenite = { version = "0.28.0", features = ["native-tls"] }
native-tls = "0.2"
rmp-serde = "1.3"



